k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qatar-frontend-svc
  labels:
    app: qatar-frontend
spec:
  selector:
    app: qatar-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
